--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,23 @@ header div h2 {
   position: relative;
 }
 
+.icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 2rem;
+  color: white;
+  animation: iconSize 1s infinite alternate;
+  opacity: 0;
+}
+
+@keyframes iconSize {
+  100% {
+    opacity: 1;
+  }
+}
+
 @media screen and (orientation: portrait) {
   header {
     flex-direction: column;
