--- a/src/App.css
+++ b/src/App.css
@@ -10,10 +10,11 @@ body {
 }
 
 header {
-  background-color: darkolivegreen;
+  background-color: rgb(182, 140, 1);
+  background-color: rgb(155, 131, 53);
   padding: 1rem;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   width: 100vw;
 }
@@ -25,22 +26,41 @@ header div {
   justify-content: center;
   align-items: center;
   position: relative;
+  margin-left: 10vw;
 }
 
 header div h2 {
   font-family: 'Racing Sans One', cursive, sans-serif;
   letter-spacing: 3px;
-  font-size: 2rem;
+  font-size: 3rem;
   text-transform: uppercase;
-  text-shadow: 2px 2px 2px #222;
+  text-shadow: 3px 3px 3px #222;
+  margin-bottom: 30px;
+}
+
+
+.loader2 {
+  width: 200px;
+  animation: loaderFly 1s infinite alternate;
+}
+
+@keyframes loaderFly {
+  100% {
+    transform: translateY(-10px);
+  }
 }
 
 .search {
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   border: 2px solid #222;
   border-radius: 10px;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 2rem;
   width: 200px;
+  font-family: 'Racing Sans One', cursive, sans-serif;
+  letter-spacing: 1px;
+  color: #222;
+  text-transform: capitalize;
+  text-align: center;
 }
 
 
@@ -59,8 +79,8 @@ header div h2 {
 }
 
 .movie {
-  background-color: rgb(59, 90, 0);
-  border: 1px solid rgb(59, 90, 0);
+  background-color: rgb(182, 140, 1);
+  border: 2px solid rgb(182, 140, 1);
   margin: 1rem;
   width: 300px;
   border-radius: 5px;
@@ -93,10 +113,20 @@ header div h2 {
     padding: 0;
   }
 
+  header div {
+    margin-left: 0vw;
+    width: 100vw;
+  }
+
+  .loader2 {
+    margin-top: 5vh;
+    width: 200px;
+  }
 
   header div h2 {
     text-align: center;
     margin: 1rem auto;
+    font-size: 2rem;
   }
 
   .search {
@@ -171,7 +201,7 @@ header div h2 {
 }
 
 .movie-over h2 {
-  color: rgb(59, 90, 0);
+  color: rgb(182, 140, 1);
 }
 
 .movie:hover .movie-over {
@@ -184,7 +214,7 @@ header div h2 {
   padding: 10px 20px;
   font-size: 1.3rem;
   text-transform: uppercase;
-  background: rgb(59, 90, 0);
+  background: rgb(182, 140, 1);
   color: white;
   border: none;
   border-radius: 5px;
@@ -199,14 +229,10 @@ header div h2 {
 
 .seeMoreBtn:hover {
   background: white;
-  color: rgb(59, 90, 0);
+  color: rgb(182, 140, 1);
 }
 
 .loader {
-  /* position: relative;
-  bottom: 5vh;
-  left: 50%;
-  transform: translateX(-50%); */
   margin: 5vh auto 10vh;
   width: 200px;
   display: flex;
